- Added SelectionChanged signal to TextBox
- Added getSelectionStart and getSelectionEnd functions to TextBox
- Added mousePressed and mouseReleased to respond to different mouse buttons in custom widgets
- Added focusable property to widgets
- Added TextureBackground property to Label, Panel and ChildWindow renderers
- Added VerticalScrollAmount and HorizontalScrollAmount to ScrollablePanel
- Container widgets didn't pass right click event to child widgets
- Widget state was incorrect when starting a show/hide animation while another was still busy
- Disabling tabs widget caused selected tab to be deselected
- Vertical alignment in Label didn't work correctly when there was a scrollbar
- Knob never responded to mouse events on places where the background texture was transparent
- Text color wasn't updated in MenuBar when disabling and re-enabling widget


TGUI 0.8.5  (6 April 2019)
--------------------------

- Big improvements to Gui Builder
- Svg images are now supported
- ComboBox can now contain some text when no item is selected
- Added function to ComboBox to disallow changing the selected item by scrolling the mouse wheel
- Added RightClicked signal to ListView
- Added functions to ListView to change existing items
- Support typing tabs in TextBox (if tab usage is disabled in gui)
- Added function to signals to temporarily disable callbacks
- Added addition and subtraction operators to Outline
- ChildWindow can now have a different border color in focused state
- Added function to select item in TreeView
- EditBox::setInputValidator now returns false when regex was invalid
- Let ComboBox send the ItemSelected event only after the mouse is released
- TitleBarHeight property of default renderer was ignored in ChildWindow
- Label didn't ignore events after ignoreMouseEvents was called
- Adding space around widgets in Grid to fill the given size wasn't working properly
- Loading widget from file failed when min or max was used in layout strings

